--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2690,3 +2690,104 @@ padding: 20px;
     opacity: 1;
   }
 }
+
+
+.call-to-action .phone-1 {
+  margin-top: 60px;
+  position: relative;
+  left: 0;
+  box-shadow: 0 15px 50px 0 rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .call-to-action .phone-1 {
+    position: absolute;
+    left: 60%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .call-to-action .phone-1 {
+    left: 700px;
+    transform: none;
+  }
+}
+
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.774);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.modal.show {
+  opacity: 1;
+}
+
+.modal-content {
+  background-color: #163768;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #000;
+  width: 90%;
+  max-width: 800px;
+  transform: scale(0.7);
+  transition: transform 0.3s ease;
+}
+
+.modal.show .modal-content {
+  transform: scale(1);
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+}
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 768px) {
+  .modal-content {
+    margin: 20% auto;
+    width: 95%;
+  }
+}
+
+
+.logo-header {
+  width: 20px;
+  height: 25px;
+  margin-right: 10px;
+}
