--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -261,7 +261,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .scrolled .header {
   box-shadow: 0px 0 18px color-mix(in srgb, var(--default-color), transparent 85%);
-  background: linear-gradient(135deg, #0d1b30 25%, #043e94 100%);
+  background: #163768;
   text-decoration: #fff;
 }
 
@@ -370,7 +370,7 @@ h1, h2, h3, h4, h5, h6 {
   .navmenu .dropdown ul {
     margin: 0;
     padding: 10px 0;
-    background: var(--nav-dropdown-background-color);
+    background: #163768;
     display: block;
     position: absolute;
     visibility: hidden;
@@ -697,7 +697,7 @@ h1, h2, h3, h4, h5, h6 {
   inset: 0;
   z-index: 9999;
   overflow: hidden;
-  background: linear-gradient(135deg, #0d1b30 25%, #043e94 100%);
+  background: #163768 ;
   transition: all 0.6s ease-out;
   display: flex;
   justify-content: center;
@@ -735,10 +735,10 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: rgb(12, 47, 88);
+  background: #163768;
   width: 40px;
   height: 40px;
-  border-radius: 4px;
+  border-radius: 50%;
   transition: all 0.4s;
 }
 
@@ -2212,7 +2212,7 @@ padding: 20px;
   height: 50px;
   bottom: 60px;
   right: 10px;
-  background: rgb(12, 47, 88);
+  background: #163768;
   color: #fff;
   border-radius: 50%;
   display: flex;
