--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,91 +137,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-
-.imagenlogo {
-  position: relative;
-  display: inline-block;
-}
-
-.imagenlogo-img {
-  display: block;
-  transition: filter 0.3s ease-in-out;
-}
-
-.imagenlogo-img:hover {
-  filter: brightness(1.5);
-}
-
-.imagenlogo-img::before,
-.imagenlogo-img::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: inherit;
-  z-index: -1;
-  opacity: 0.8;
-  clip: rect(0, 900px, 0, 0);
-}
-
-.imagenlogo-img:hover::before {
-  animation: glitch 0.3s infinite;
-}
-
-.imagenlogo-img:hover::after {
-  animation: glitch 0.3s infinite;
-  animation-delay: 0.15s;
-}
-
-@keyframes glitch {
-  0% {
-    clip: rect(10px, 9999px, 10px, 0);
-    transform: skew(0.5deg);
-  }
-  10% {
-    clip: rect(20px, 9999px, 80px, 0);
-    transform: skew(0.5deg);
-  }
-  20% {
-    clip: rect(30px, 9999px, 85px, 0);
-    transform: skew(0.5deg);
-  }
-  30% {
-    clip: rect(40px, 9999px, 90px, 0);
-    transform: skew(0.5deg);
-  }
-  40% {
-    clip: rect(50px, 9999px, 95px, 0);
-    transform: skew(0.5deg);
-  }
-  50% {
-    clip: rect(60px, 9999px, 100px, 0);
-    transform: skew(0.5deg);
-  }
-  60% {
-    clip: rect(70px, 9999px, 105px, 0);
-    transform: skew(0.5deg);
-  }
-  70% {
-    clip: rect(80px, 9999px, 110px, 0);
-    transform: skew(0.5deg);
-  }
-  80% {
-    clip: rect(90px, 9999px, 115px, 0);
-    transform: skew(0.5deg);
-  }
-  90% {
-    clip: rect(100px, 9999px, 120px, 0);
-    transform: skew(0.5deg);
-  }
-  100% {
-    clip: rect(110px, 9999px, 125px, 0);
-    transform: skew(0.5deg);
-  }
-}
-
 .hide {
   display: none !important;
 }
@@ -245,7 +160,6 @@ h1, h2, h3, h4, h5, h6 {
   width: 200%;
   height: 100%;
   background: linear-gradient(120deg, transparent, rgba(145, 186, 248, 0.171), transparent);
-  animation: shine 4s infinite alternate;
 }
 
 .header .logo {
@@ -286,11 +200,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 
-@keyframes shine {
-  to {
-    left: 10%;
-  }
-}
+
 
 @keyframes textGlow {
   0%, 100% {
@@ -880,6 +790,24 @@ section,
   position: relative;
 }
 
+.lazy {
+  opacity: 0;
+  transition: opacity 0.3s ease-in;
+}
+
+.lazy.loaded {
+  opacity: 1;
+}
+
+.hero-fallback-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media (min-width: 1200px) {
   .hero:after {
     content: "";
@@ -898,13 +826,12 @@ section,
 }
 
 .hero video {
-  inset: 0;
-  display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: 0;
   position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .hero .container,
@@ -978,6 +905,11 @@ section,
   }
 }
 
+@media (max-width: 768px) {
+  .hero video {
+      height: 100vh;
+  }
+}
 /* Why Us Section */
 .why-us {
   background-color: #fff;
@@ -2807,3 +2739,24 @@ padding: 20px;
   height: 25px;
   margin-right: 10px;
 }
+
+
+.youtube-videos .video-preview {
+  aspect-ratio: 16/9;
+  margin-bottom: 20px;
+}
+
+.youtube-videos .play-button:hover {
+  background-color: red !important;
+  transition: background-color 0.3s ease;
+}
+
+.youtube-videos .carousel-item {
+  padding: 0 15px;
+}
+
+.youtube-videos iframe {
+  aspect-ratio: 16/9;
+}
+
+
