--- a/safetypage.css
+++ b/safetypage.css
@@ -31,7 +31,7 @@ section,
   padding: 80px 0 40px 0;
   display: flex;
   align-items: center;
-  background: url(../img/hero-bg.png) no-repeat center center;
+  background: url(../img/hero-bg.webp) no-repeat center center;
   background-size: cover;
 }
 
@@ -175,7 +175,6 @@ section,
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url('ruta/a/tu/favicon - copia.png');
   background-size: 50vh;
   background-position: center;
   background-repeat: no-repeat;
