--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -601,6 +601,41 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
+/* Preloader */
+#preloader {
+  position: fixed;
+  inset: 0;
+  z-index: 9999;
+  overflow: hidden;
+  background: #163768 ;
+  transition: all 0.6s ease-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Animación de cargando usando el logo de la empresa */
+#preloader img {
+  width: 300px; /* Ajusta el tamaño según tu logo */
+  height: auto;
+  animation: logo-pulse 1.5s infinite ease-in-out; /* Animación de pulsación */
+}
+
+@keyframes logo-pulse {
+  0% {
+    transform: scale(1);
+    opacity: 0.8;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0.8;
+  }
+}
+
 
 /* Scroll Top Button */
 .scroll-top {
