--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2739,6 +2739,11 @@ padding: 20px;
   height: 25px;
   margin-right: 10px;
 }
+.logo-header2 {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
 
 
 .youtube-videos .video-preview {
